--- a/index.html
+++ b/index.html
@@ -24,5 +24,20 @@
         <img src="./headshot.jpg" width="400" height="auto">
     </div>
 
+    <div class="section3">
+        <p class="header3">Services</p>
+        <div class="icons">
+         <img src="./icon1.jpg" width="150" height="auto">
+         <img src="./icon2.jpg" width="150" height="auto">
+         <img src="./icon3.jpg" width="150" height="auto">
+         <img src="./icon4.jpg" width="150" height="auto">
+        </div>
+        <ul class="icon-captions">
+            <li>Content Repurposing</li>
+            <li>SEO Improvement</li>
+            <li>Automations & Systems</li>
+            <li>Passive Income</li>
+        </ul>
+    </div>
 </body>
 </html>
