Add section 3 with icons and captions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="section2">
         <div class="left-box">
             <div class="header2">Work With Savannah</div>
-            <div class="text">Take your private practice from start-up to well oiled machine with savvy automations, SEO, passive income and smart content creation.</div>
+            <div class="headertext">Take your private practice from start-up to well oiled machine with savvy automations, SEO, passive income and smart content creation.</div>
             <button>Contact Sav</button> 
         </div>
         <img src="./headshot.jpg" width="400" height="auto">
@@ -26,18 +26,24 @@
 
     <div class="section3">
         <p class="header3">Services</p>
-        <div class="icons">
-         <img src="./icon1.jpg" width="150" height="auto">
-         <img src="./icon2.jpg" width="150" height="auto">
-         <img src="./icon3.jpg" width="150" height="auto">
-         <img src="./icon4.jpg" width="150" height="auto">
+        <div class="icon-group">
+            <div class="icon">
+                <img src="./icon1.jpg" width="150" height="auto">
+                <p class="text">Content Repurposing</p>
+            </div>
+            <div class="icon">
+                <img src="./icon2.jpg" width="150" height="auto">
+                <p class="text">SEO Improvement</p>
+            </div>
+            <div class="icon">
+                <img src="./icon3.jpg" width="150" height="auto">
+                <p class="text">Automations & Systems</p>
+            </div>
+            <div class="icon">
+                <img src="./icon4.jpg" width="150" height="auto">
+                <p class="text">Passive Income</p>
+            </div>
         </div>
-        <ul class="icon-captions">
-            <li>Content Repurposing</li>
-            <li>SEO Improvement</li>
-            <li>Automations & Systems</li>
-            <li>Passive Income</li>
-        </ul>
     </div>
 </body>
 </html>
