--- a/index.html
+++ b/index.html
@@ -45,5 +45,14 @@
             </div>
         </div>
     </div>
+   <div class="quotebox">
+    <div class="quote">
+        Savannah is both personable and professional. She consistently overdelivered in the 7 months we worked together. She is organized and very attentive to detail. She was able to learn my voice quickly in order to be able to create content that took minimal editing from me. She was willing to learn anything she needed to in order to help me with additional projects. She was flexible in offering packages that aligned with my ever-changing needs. I would highly recommend Savannah as your virtual assistant, she was the best investment for my business and I couldn't have launched a membership or been consistent in putting out content without her. 
+    </div>
+    <div ID="signature">
+        -Mikaela Snooks, RD
+    </div>
+</div>
+
 </body>
 </html>
