Add call to action

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="left-box">
             <div class="header2">Work With Savannah</div>
             <div class="headertext">Take your private practice from start-up to well oiled machine with savvy automations, SEO, passive income and smart content creation.</div>
-            <button>Contact Sav</button> 
+            <button class="contact-button">Contact Sav</button> 
         </div>
         <img src="./headshot.jpg" width="400" height="auto">
     </div>
@@ -46,13 +46,23 @@
         </div>
     </div>
    <div class="quotebox">
-    <div class="quote">
-        Savannah is both personable and professional. She consistently overdelivered in the 7 months we worked together. She is organized and very attentive to detail. She was able to learn my voice quickly in order to be able to create content that took minimal editing from me. She was willing to learn anything she needed to in order to help me with additional projects. She was flexible in offering packages that aligned with my ever-changing needs. I would highly recommend Savannah as your virtual assistant, she was the best investment for my business and I couldn't have launched a membership or been consistent in putting out content without her. 
+        <div class="quote">
+            Savannah is both personable and professional. She consistently overdelivered in the 7 months we worked together. She is organized and very attentive to detail. She was able to learn my voice quickly in order to be able to create content that took minimal editing from me. She was willing to learn anything she needed to in order to help me with additional projects. She was flexible in offering packages that aligned with my ever-changing needs. I would highly recommend Savannah as your virtual assistant, she was the best investment for my business and I couldn't have launched a membership or been consistent in putting out content without her. 
+        </div>
+        <div ID="signature">
+            -Mikaela Snooks, RD
+        </div>
     </div>
-    <div ID="signature">
-        -Mikaela Snooks, RD
+   <div class="section5">
+        <div class="cta">
+            <div class="cta-left">
+                <p class="cta-top"> Don't miss out!</p>
+                <p class="cta-bottom">Snag all the actionable tips Savannah sends out via email twice a month. </p>
+            </div>
+            <button>Sign up</button>
     </div>
-</div>
-
+        </div>
+        </div>
+    </div>
 </body>
 </html>
